css/style.css
:root {
    --primary-color: #E5E9F0;
    --primary-bg-color: #2E3440;
    --secondary-color: #88C0D0;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    display: grid;
    grid-template-rows: 25% auto 25%;
    grid-template-columns: 25% auto 25%;
    grid-template-areas: 
        ". . ."
        ". main aside"
        "footer footer footer";
    min-height: 100vh;
    background-color: var(--primary-bg-color);
}


body main {
    grid-area: main;
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--primary-color);  
}

.container-img {
    padding-right: 15px;
}

.container-img img {
    border-radius: 50%;
}

.container-content {
    padding-left: 15px;
}

.container-content h1 {
    font-size: 45px;
    font-family: 'Raleway', sans-serif;
}

.container-content p {
    font-size: 18px;
    padding-top: 5px;
    font-family: sans-serif;
}

body aside {
    grid-area: aside;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding-right: 14px;
}

body aside ul {
    list-style-type: none;
    font-size: 25px;
}

body aside ul li:nth-child(1), body aside ul li:nth-child(2) {
    padding-bottom: 10px;
}

li a {
    color: var(--primary-color);
}

li a:hover {
    color: var(--secondary-color);
}

body footer {
    grid-area: footer;
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    padding: 0 14px 14px 0;
}

footer button {
    color: var(--primary-color);
    font-size: 25px;
    border: none;
    cursor: pointer;
    background-color: transparent;
}

footer button:hover {
    color: var(--secondary-color);
}

